--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "cd server/ && node server.js"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "child_process": "^1.0.2",
     "ds18b20-raspi": "^0.3.3",
     "fs": "0.0.1-security",
